# mensetu_renshyuu

./: .gitignore  README.md  SETUP.md  SYSTEM_OVERVIEW.md  app.py  check_tables.py  create_tables.py  create_test_users.py  plan.md  requirements.md  requirements.txt  requirements_simple.txt  全国情報教育コンテスト応募用紙.md  実行手順書.md
.github/: DESIGN.md  ai-implementation.md  api-design.md  copilot-instructions-simple.md  copilot-instructions.md  database-design.md
backend/: README.md  init_supabase.sql  main.py  pyproject.toml  run.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  health.py  profiles.py  sessions.py  upload.py
backend/app/clients/: supabase.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  system.py
backend/app/schemas/: auth.py  profile.py  session.py  user.py
backend/app/services/: __init__.py  analysis.py  auth.py  gemini.py  profile.py  session.py
backend/app/tasks/: __init__.py  analysis.py
backend/services/: ai_analysis.py  audio_analysis.py  post_session_pipeline.py  realtime_analyzer.py  realtime_transcription.py  report.py  session_recorder.py  transcription.py  video_analysis.py  video_processors.py  voice_emotion.py
backend/static/: realtime.html
backend/templates/: report.md.j2
backend/tests/: test_health.py  test_session_markdown.py
docs/: api_specification.md  database_design.md  design_document.md  requirements.md  speaker-diarization.md  system_specification.md  (+3 more)
(+54 files in other folders)
